Example site UI and Readme changes

--- a/example-site/index.html
+++ b/example-site/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Animated Menu React</title>
+    <meta name="description" content="A sidebar componet for react with collection of animations">
+    <meta name="keywords" content="animated, menu, react, typescript, css, animations, transitions, component, library, package, npm">
   </head>
   <body>
     <div id="root"></div>
